--- a/changlog/index.html
+++ b/changlog/index.html
@@ -6,6 +6,12 @@
 <xmp id="mdmain" theme="united" style="display:none;">
 # 更新日志
 
+## LLCOM 1.0.0.1
+
+- 发布beta版本
+
+---
+
 ## LLCOM 1.0.0.0
 
 - 增加全自动升级功能
