--- a/changlog/index.html
+++ b/changlog/index.html
@@ -6,6 +6,12 @@
 <xmp id="mdmain" theme="united" style="display:none;">
 # 更新日志
 
+## LLCOM 1.0.0.3
+
+- 增加table部分的题目
+
+---
+
 ## LLCOM 1.0.0.2
 
 - 更正两道错误题目
