--- a/changlog/index.html
+++ b/changlog/index.html
@@ -6,6 +6,14 @@
 <xmp id="mdmain" theme="united" style="display:none;">
 # 更新日志
 
+## LLCOM 1.0.0.4
+
+- 增加`继续上次学习`按钮
+- 增加一道table的题目
+- 增加循环语句（for、while、break）的题目
+
+---
+
 ## LLCOM 1.0.0.3
 
 - 增加table部分的题目
