--- a/changlog/index.html
+++ b/changlog/index.html
@@ -6,6 +6,13 @@
 <xmp id="mdmain" theme="united" style="display:none;">
 # 更新日志
 
+## LLCOM 1.0.0.5
+
+- 增加string库内容
+- 更正某些题目的bug
+
+---
+
 ## LLCOM 1.0.0.4
 
 - 增加`继续上次学习`按钮
