--- a/changlog/index.html
+++ b/changlog/index.html
@@ -6,6 +6,12 @@
 <xmp id="mdmain" theme="united" style="display:none;">
 # 更新日志
 
+## LLCOM 1.0.0.6
+
+- 增加table库内容
+
+---
+
 ## LLCOM 1.0.0.5
 
 - 增加string库内容
