--- a/changlog/index.html
+++ b/changlog/index.html
@@ -6,6 +6,13 @@
 <xmp id="mdmain" theme="united" style="display:none;">
 # 更新日志
 
+## LLCOM 1.0.0.7
+
+- 正式发布软件
+- 增加帮助按钮，可以去网页提问
+
+---
+
 ## LLCOM 1.0.0.6
 
 - 增加table库内容
