--- a/changlog/index.html
+++ b/changlog/index.html
@@ -6,6 +6,12 @@
 <xmp id="mdmain" theme="united" style="display:none;">
 # 更新日志
 
+## LLCOM 1.0.0.8
+
+- 更正break答案检查代码的错误，之前判断有问题
+
+---
+
 ## LLCOM 1.0.0.7
 
 - 正式发布软件
