更正答对任何题都能解锁下一题的bug

--- a/changlog/index.html
+++ b/changlog/index.html
@@ -6,39 +6,43 @@
 <xmp id="mdmain" theme="united" style="display:none;">
 # 更新日志
 
-## LLCOM 1.0.0.9
+## LUATeach 1.0.1.0
+
+- 更正答对任何题都能解锁下一题的bug
+
+## LUATeach 1.0.0.9
 
 - 更正循环题目第一题的判断错误问题
 
 ---
 
-## LLCOM 1.0.0.8
+## LUATeach 1.0.0.8
 
 - 更正break答案检查代码的错误，之前判断有问题
 
 ---
 
-## LLCOM 1.0.0.7
+## LUATeach 1.0.0.7
 
 - 正式发布软件
 - 增加帮助按钮，可以去网页提问
 
 ---
 
-## LLCOM 1.0.0.6
+## LUATeach 1.0.0.6
 
 - 增加table库内容
 
 ---
 
-## LLCOM 1.0.0.5
+## LUATeach 1.0.0.5
 
 - 增加string库内容
 - 更正某些题目的bug
 
 ---
 
-## LLCOM 1.0.0.4
+## LUATeach 1.0.0.4
 
 - 增加`继续上次学习`按钮
 - 增加一道table的题目
@@ -46,25 +50,25 @@
 
 ---
 
-## LLCOM 1.0.0.3
+## LUATeach 1.0.0.3
 
 - 增加table部分的题目
 
 ---
 
-## LLCOM 1.0.0.2
+## LUATeach 1.0.0.2
 
 - 更正两道错误题目
 
 ---
 
-## LLCOM 1.0.0.1
+## LUATeach 1.0.0.1
 
 - 发布beta版本
 
 ---
 
-## LLCOM 1.0.0.0
+## LUATeach 1.0.0.0
 
 - 增加全自动升级功能
 
